welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:24: error: 'while' expected but identifier found.
	cp==zero;
        ^Poucet:24: error: '(' expected but ';' found.
	cp==zero;
                ^